Improve entity's equipment system
- Entities can now drop equipments with probability
- Damage durable equipment when dropped
- Fix sometime not showing mainhand item

--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
         "php": "^8.0",
         "pocketmine/pocketmine-mp": "^5.0.0",
         "phpstan/phpstan": "1.10.21"
+    },
+    "autoload": {
+        "psr-0": {
+            "IvanCraft623\\MobPlugin\\": "src"
+        }
     }
 }
