--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,20 @@
     "description": "Plugin for PocketMine-MP that implements mobs AI.",
     "type": "project",
     "license": "Apache-2.0",
+    "require": {
+        "ivancraft623/pathfinder": "dev-main"
+    },
     "require-dev": {
         "php": "^8.0",
         "pocketmine/pocketmine-mp": "^5.6.0",
         "phpstan/phpstan": "1.10.21"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/IvanCraft623/Pahtfinder.git"
+        }
+    ],
     "autoload": {
         "psr-0": {
             "IvanCraft623\\MobPlugin\\": "src"
